# qltrader

./: .env.example  .gitignore  LICENSE  README.md  download_gm.py  factor.ipynb  profit_freq_strategy.py  pyproject.toml  qltrader.py
examples/: strategy_example.py  tushare_example.py
src/qltrader/: __init__.py  config.py  data.py  engine.py  models.py  orders.py  plotting.py  scheduler.py  tushare_data.py  utils.py
src/qltrader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
