[project]
name = "qltrader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gm>=3.0.183",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "rich>=14.3.3",
]

[[tool.uv.index]]
url = "https://pypi.mirrors.ustc.edu.cn/simple/"
default = true
