[project]
name = "qltrader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "python-dotenv>=1.0.0",
    "tushare>=1.4.7",
]

[[tool.uv.index]]
url = "https://pypi.mirrors.ustc.edu.cn/simple/"
default = true
