[project]
name = "qltrader"
version = "0.1.1"
description = "A股量化回测框架，API设计参考Zipline风格。"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "python-dotenv>=1.0.0",
    "tushare>=1.4.7",
]

[[tool.uv.index]]
url = "https://pypi.mirrors.ustc.edu.cn/simple/"
default = true
